--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.164",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "redis": "^4.6.10"
   }
 }
